dark mode fixed

--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -1,7 +1,5 @@
 @import "tailwindcss";
 
-@custom-variant dark (&:is(.dark *));
-
 :root {
   --background: oklch(1 0 0);
   --foreground: oklch(0.145 0 0);
@@ -91,6 +89,10 @@
   .hero-background {
     background: radial-gradient(ellipse 140% 100% at bottom, #649DE1 0%, #0C44A7 30%, #060606 60%);
   }
+}
+
+:is(.dark .hero-background) {
+  background: radial-gradient(ellipse 140% 100% at bottom, #649DE1 0%, #0C44A7 30%, #060606 60%);
 }
 
 body {
